creating first route
