# src/app/api/endpoints/handlers/dtos/response/song_response.go
@@ -7,15 +7,15 @@ import (
 )
 
 type SongDTO struct {
-	ID          uuid.UUID  `json:"id"`
+	ID          string     `json:"id"`
 	Name        string     `json:"name"`
 	ArtistID    uuid.UUID  `json:"artist_id"`
 	AlbumID     *uuid.UUID `json:"album_id,omitempty"`
 	ReleaseDate time.Time  `json:"release_date"`
-	Duration    string     `json:"duration"`
+	Duration    int        `json:"duration"`
 }
 
-func NewSongDTO(ID uuid.UUID, Name string, ArtistID uuid.UUID, AlbumID *uuid.UUID, ReleaseDate time.Time, Duration string) *SongDTO {
+func NewSongDTO(ID, Name string, ArtistID uuid.UUID, AlbumID *uuid.UUID, ReleaseDate time.Time, Duration int) *SongDTO {
 	return &SongDTO{
 		ID:          ID,
 		Name:        Name,
